add users list by organization
